@@ -4044,7 +4044,19 @@ command to generate the output files.
       <match type="string" value="NSVf" offset="0"/>
     </magic>
     <glob pattern="*.nsv"/>
-    <glob pattern="*.NSV"/>
+  </mime-type>
+  <mime-type type="application/sdp">
+    <alias type="application/x-sdp" />
+    <alias type="application/vnd.sdp" />
+    <_comment>SDP multicast stream file</_comment>
+    <acronym>SDP</acronym>
+    <expanded-acronym>Session Description Protocol</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="v=" offset="0">
+        <match type="string" value="s=" offset="0:256" />
+      </match>
+    </magic>
+    <glob pattern="*.sdp"/>
   </mime-type>
   <mime-type type="video/x-sgi-movie">
     <_comment>SGI video</_comment>
