@@ -39,6 +39,7 @@ ooo-xp.doc application/msword
 
 # Playlist formats supported by Totem
 stream.nsc application/x-netshow-channel
+stream.sdp application/sdp x
 playlist.asx audio/x-ms-asx
 
 # text
